--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/assessment-webgl.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/assessment-webgl.data.br",
-        frameworkUrl: buildUrl + "/assessment-webgl.framework.js.br",
-        codeUrl: buildUrl + "/assessment-webgl.wasm.br",
+        dataUrl: buildUrl + "/assessment-webgl.data",
+        frameworkUrl: buildUrl + "/assessment-webgl.framework.js",
+        codeUrl: buildUrl + "/assessment-webgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Kiumtech",
         productName: "AssessmentApp",
