--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | AssessmentApp</title>
+    <title>Unity Web Player | Assessment_Standalone</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">AssessmentApp</div>
+        <div id="unity-build-title">Assessment_Standalone</div>
       </div>
     </div>
     <script>
@@ -52,15 +52,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/assessment-webgl.loader.js";
+      var loaderUrl = buildUrl + "/Assessment_Standalone.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/assessment-webgl.data",
-        frameworkUrl: buildUrl + "/assessment-webgl.framework.js",
-        codeUrl: buildUrl + "/assessment-webgl.wasm",
+        dataUrl: buildUrl + "/Assessment_Standalone.data",
+        frameworkUrl: buildUrl + "/Assessment_Standalone.framework.js",
+        codeUrl: buildUrl + "/Assessment_Standalone.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Kiumtech",
-        productName: "AssessmentApp",
+        productName: "Assessment_Standalone",
         productVersion: "1.0",
         showBanner: unityShowBanner,
         // errorHandler: function(err, url, line) {
